--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <title>FluxApp</title>
 
     <link rel="stylesheet" href="css/bootstrap-paper.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
